--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -105,52 +105,93 @@
 }
 
 .column-two{
-    margin-top: 100px;
+    margin-top: 10px;
     margin-right:10px;
     margin-left: 275px;
     margin-bottom: 100%;
+    padding:100px;
     display:block;
-    height: 500px;
-    width: 500px; 
-    border-bottom:1px solid #eee;
-    border-top:1px solid #eee;
+    height: 1000px;
+    width: 1000px; 
     position:relative;
     box-sizing:border-box;
 
 }
-
+/*.repo-list{
+    margin-top: 100px;
+    margin-right:10px;
+    margin-left: 275px;
+    margin-bottom: 100
+    height:500px;
+    width:500px; 
+    position:relative;
+    box-sizing:border-box;
+}*/
 .get-names1{
-    font-size:20px;
-    color:blue;
-    line-height:32px;
-    margin-top:0;
-    margin-bottom:0;
-    white-space:nowrap;
-    display:block;
-     border-bottom:1px solid #eee;
-     text-align:center;
-   
+    font-size: 20px;
+    color:#4183c4;
+    line-height: 32px;
+    margin-top: 0;
+    margin-bottom: 0;
+    white-space: nowrap;
+    display: block;
+    font-weight: bold;
+    border-top:1px solid #eee;
 }
+
+.get-description{
+    color:#333333;
+    text-decoration:none;
+    margin: 0 0 5px;
+    font-size:14px;
+
+}
+
+.update{
+    margin:0;
+    font-size:11px;
+    color:#999999;
+}
+
+
+.rep-template{
+    position:relative;
+    padding-left:45px;
+    padding-bottom:20px;
+    margin:0 0 20px;
+    list-style:none;
+    border-bottom:1 px solid #eee;
+
+}
+
+.repo-list{
+    float: right;
+    list-style: none;
+    font-size: 11px;
+    font-weight: bold;
+    line-height: 20px;
+    color: #666;
+    position: relative;
+    top: 9px;
+    width: 150px;
+
+}
+
 
 .get-stars1{
-    font-size:20px;
-    line-height:32px;
-    margin-top:0;
-    padding-left:300px;
-    margin-bottom:0;
-    display:block;
-     border-bottom:1px solid #eee;
+    float: right;
+    padding-right:10px;
+  
+    
 }
 .get-forks1{
-   display:block;
-   font-size:14px;
-    line-height:32px;
-    margin-top:0px;
-    margin-bottom:0;
-    margin-right:0;
-    padding-left:400px;
-    white-space:nowrap; 
-     border-bottom:1px solid #eee;
+    float: right;
+ 
 
+}
+
+.get-language{
+    float: right;
+    padding-right: 10px;
 }
 
