--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -110,7 +110,7 @@
     margin-top: 10px;
     margin-right:10px;
     margin-left: 275px;
-    margin-bottom: 100%;
+    margin-bottom: 10px;
     padding-left:300px;
     padding-top:100px;
     display:block;
@@ -118,6 +118,7 @@
     width: 1000px; 
     position:relative;
     box-sizing:border-box;
+
     
 }
 
@@ -163,6 +164,9 @@
     margin:0 0 20px;
     list-style:none;
     border-bottom:1 px solid #eee;
+    
+
+   
 
 }
 
@@ -176,6 +180,8 @@
     position: relative;
     top: 9px;
     width: 150px;
+
+
    
 
 }
@@ -184,6 +190,7 @@
 .get-stars1{
     float: right;
     padding-right:10px;
+     
   
     
 }
